✨ make run JVM arguments configurable